Update src/main/java/com/cloudbees/jenkins/support/api/Component.java
Co-authored-by: Jesse Glick <jglick@cloudbees.com>